--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@covalenthq/client-sdk": "^0.7.5",
     "axios": "^1.6.0",
     "axios-rate-limit": "^1.3.0",
     "bignumber.js": "^9.1.2",
