--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "fast-csv": "^4.3.6",
     "index": "^0.4.0",
     "index.js": "^0.0.3",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.43",
     "needle": "^3.2.0",
+    "node-schedule": "^2.1.1",
     "sig": "^1.0.0",
+    "sqlite3": "^5.1.7",
     "telegraf": "^4.15.0",
     "test.js": "^1.0.0",
     "web3": "^4.2.2",
